# sto

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: bench.rs  word_builder.rs
src/: arena.rs  constants.rs  entry.rs  lib.rs  repository.rs
