[package]
name = "sto"
version = "0.1.1"
authors = ["unbyte <i@shangyes.net>"]
description = "Yet another string interner"
keywords = ["string", "interner"]
repository = "https://github.com/ost-project/sto"
homepage = "https://github.com/ost-project/sto#readme"
documentation = "https://docs.rs/sto"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", default-features = false }
parking_lot = "0.12"

once_cell = { version = "1.17", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["global"]
global = ["once_cell"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
